--- a/FrontEnd/display.html
+++ b/FrontEnd/display.html
@@ -15,27 +15,17 @@
 
 
     <h3 class="Title">AVAILABLE PLANS</h3>
-    <input type="submit" value="Logout" onclick="logOut()">
+
+    <a href="ViewPurchase.html">View All Purchased</a>
+
+    <input type="submit" class="logout" value="Logout" onclick="logOut()">
 
     <div class="box">
 
-        <!-- <h5>Emi</h5>
-        <p id="months">12 months</p>
-        <h6 id="monthlyEmi">13 rs</h6>
-        <hr>
-        <div class="min">
-            <h6>Total payment</h6>
-            <p id="totalPay">1234</p>
-            <div class="progress">
-                <div class="progress-bar" role="progressbar" id="loanAmount" style="width: 100%;" aria-valuenow="15"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                <div class="progress-bar bg-success" role="progressbar" id="intrest" style="width: 891%;"
-                    aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
 
-            </div> -->
     </div>
 
-    <br> <br><br><br>
+
 
 
 </body>
