Pre-Final Check

--- a/FrontEnd/ViewPurchase.html
+++ b/FrontEnd/ViewPurchase.html
@@ -6,15 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./js/externalScripts.js"></script>
+    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/viewpurchase.css">
     <title>Purchased Data</title>
 </head>
 
 <body onload="ShowMyPurchase()">
 
-    <div class="box">
+    <h2 class="Title">PURCHASED PLAN</h2>
 
-
+    <div id="showmsg">
+        <center> <img id="svgVoid" src="css/svg/undraw_void_-3-ggu.svg" alt="">
+            <br> <br>
+            <h4>- No data -</h4>
+        </center>
     </div>
+    <div id="loading">
+        <center> <img id="svgVoid" src="css/svg/xc.svg" alt="">
+            <br> <br>
+            <h4>- Loading -</h4>
+        </center>
+    </div>
+    <div class="box2"></div>
+
 </body>
 
 </html>
