--- a/FrontEnd/FormScreen.html
+++ b/FrontEnd/FormScreen.html
@@ -15,6 +15,8 @@
     <h1 class="fill">Fill the Form</h1>
 
 
+    <a href="http://127.0.0.1:5500/FrontEnd/display.html" class="LastSeen">Last Seen</a>
+
     <form class="myForm" method="get" action="http://localhost:9999/SubmitFormData">
 
         <input type="text" name="useremail" id="useremail">
