--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -29,11 +29,11 @@
 
                         <div class="form-group">
                             <label for="email"><i class="zmdi zmdi-email"></i></label>
-                            <input type="email" name="Email" id="email" placeholder="Your Email" />
+                            <input type="email" name="Email" id="email" placeholder="Your Email" required />
                         </div>
                         <div class="form-group">
                             <label for="pass"><i class="zmdi zmdi-lock"></i></label>
-                            <input type="password" name="PhoneNo" id="pass" placeholder="Password" />
+                            <input type="password" name="PhoneNo" id="pass" placeholder="Password" required />
                         </div>
                         <div class="form-group form-button">
                             <input type="submit" name="signup" id="signup" class="form-submit" value="Register"
@@ -63,11 +63,11 @@
 
                         <div class="form-group">
                             <label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                            <input type="text" name="_Email" id="_email" placeholder="Your Name" />
+                            <input type="text" name="_Email" id="_email" placeholder="Your Name" required />
                         </div>
                         <div class="form-group">
                             <label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
-                            <input type="password" name="_PhoneNo" id="_pass" placeholder="Password" />
+                            <input type="password" name="_PhoneNo" id="_pass" placeholder="Password" required />
                         </div>
                         <div class="form-group form-button">
                             <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"
