--- a/FrontEnd/display.html
+++ b/FrontEnd/display.html
@@ -19,6 +19,8 @@
 
     <a href="ViewPurchase.html" class="ViewPur">View Purchased</a>
 
+    </div>
+
     <input type="submit" class="logout" value="Logout" onclick="logOut()">
 
     <div id="showmsg">
